[gd_scene load_steps=3 format=2]

[ext_resource path="res://gameplay/poop_spawn/poop_spawn.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 205.753, 114, 0, 0, 0, 0, 453.51, 109.781, 0, 0, 0, 0, 774.522, 115 )
}

[node name="poop_spawn" type="Path2D"]
position = Vector2( -164.258, -80 )
scale = Vector2( 1.62456, 1 )
curve = SubResource( 1 )
script = ExtResource( 1 )

[node name="path_follow" type="PathFollow2D" parent="."]
position = Vector2( 205.753, 114 )
rotation = -0.017029

[node name="spawn_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="poops" type="Node" parent="."]

[node name="difficulty_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="difficulty_timer" to="." method="_on_difficulty_timer_timeout"]
